Fix gradle build error